<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvEventReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/tvEventReminder"
        android:textAlignment="center"
        android:textColor="@color/black_75_percent"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_margin="8dp"
        android:background="@drawable/rect_blue"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rect_blue"
            android:padding="4dp">

            <EditText
                android:id="@+id/tvEventDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/tvEventDescription"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

    </ScrollView>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:padding="4dp">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryTr"
            android:text="@string/btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black_75_percent" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryTr"
            android:text="@string/btnClose"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/black_75_percent" />

    </LinearLayout>
</LinearLayout>
